Improve recognition of local variables